fixed overflow

--- a/emoji_world/src/App.scss
+++ b/emoji_world/src/App.scss
@@ -9,7 +9,7 @@ $secondary_color:rgb(202, 0, 40);
     box-sizing: border-box;
 }
 body{
-    // overflow-x: hidden;
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
 background: #0B2124;
 @media screen and (max-width:900px) {
